Cinnamon: Fix grouped window list visibility issue

--- a/cinnamon/_common.scss
+++ b/cinnamon/_common.scss
@@ -1410,7 +1410,7 @@ StScrollBar {
     &:active,
     &:checked {
       color: $selected_fg_color;
-      border-color: lighten($panel_bg, 20%);
+      border-color: lighten($panel_bg, 35%);
     }
 
     &:hover,
